# cqapi

./: .gitlab-ci.yml  LICENSE  README.md  UserEditorExamples.ipynb  dashboard.ipynb  demonstration.ipynb  form_tests.py  pyproject.toml  requirements.txt  setup.py  test.py
.github/: CODEOWNERS
cqapi/: __init__.py  api.py  api_sync.py  auth.py  conquery_ids.py  datasets.py  exceptions.py  namespace.py  search_conquery_id.py  user_editor.py  util.py
cqapi/auth/: auth.py  run_keycloak.js
cqapi/conquery/: api.py
cqapi/queries/: __init__.py  base_elements.py  editor.py  elements.py  export_form.py  form_elements.py  queries.py  queries_oo.py  translation.py  user_editor.py  utils.py  validate.py
doc/: api.md
examples/: dashboard.ipynb  simple_example.ipynb
tests/: api_test.py  test_conquery_ids.py  util_test.py
tests/data_util/: concept_query1.json  concept_query1_assert1.json  concept_query1_assert2.json  concept_query1_assert3.json  concept_query1_assert4.json  concept_query1_assert5.json
tests/test_queries/: test_editor.py  test_elements.py  test_queries.py  test_queries_oo.py  test_translation.py  test_utils.py  test_validate.py
tests/test_queries/test_queries/: saved_icd_au_kh.add_au_days_select.json  saved_icd_au_kh.concept_elements.json  saved_icd_au_kh.json  saved_icd_au_kh_au.json  saved_icd_au_kh_au.removed_connector_kh.json  test_queries_oo.py
