[tool.poetry]
name = "cqapi"
version = "0.1.0"
description = ""
authors = ["InGef - EVA Team <eva@ingef.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
ipython = "^8.5.0"
pandas = "^1.5.3"
numpy = "^1.22.0"
requests = "^2.25.1"
attrs = "^22.1.0"
tabulate = "^0.8.7"
typeguard = "^2.12.1"
setuptools = "^65.5.1"
pyarrow = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
