[tool.poetry]
name = "cqapi"
version = "0.1.0"
description = ""
authors = ["InGef - EVA Team <eva@ingef.de>"]
readme = "README.md"
packages = [{ include = "cqapi"}]

[tool.poetry.dependencies]
python = "^3.8"
attrs = "^22.1.0"
ipython = "^8.0.1"
pandas = "^1.3.1"
numpy = "^1.20.2"
pyarrow = "^3.0.0"
requests = "^2.25.1"
tabulate = "^0.8.7"
typeguard = "^2.12.1"
setuptools = "^65.5.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
